# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: build_50.yml
gendiff/: diff.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
